[metadata]
name = Auto3D
version = 0.1.10.dev1.4
author = 'Zhen Liu, Tetiana Zubatiuk, Olexandr Isayev'
author_email = liu5@andrew.cmu.edu, tetiana@zubatyuk.com, olexandr@olexandrisayev.com
description = Generating the Low-energy 3D Conformers from SMILES with Isomer Enumeration and Blitz Geometry Optimization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isayevlab/Auto3D_pkg 
project_urls =
    Bug Tracker = https://github.com/isayevlab/Auto3D_pkg/issues 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
#...
install_requires =
    tqdm
    psutil
    Send2Trash

[options.packages.find]
where = src